--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "imh",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,6 +11,7 @@
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
+    "lowdb": "^7.0.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
